--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 
   <body>
     <header class="page-header">
-      <div class="container">Иван Радостев +79313215508</div>>
+      <div class="container">
+        <a class="header-email" href="mailto:vano9022@gmail.com">vano9022@gmail.com</a> 
+        <a class="header-phone" href="tel:+79313215508">+79313215508</a>
+      </div>
     </header>
 
       <section class="hero-image">
         <div class="container">
-          <h1 class="heading">Опознанный Енот</h1>
+          <h1 class="heading">Радостев Иван</h1>
           <p>Junior верстальщик</p>
         </div>
       </section>
@@ -22,10 +25,26 @@
     <section class="intro">
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
+        <figure class="user-image">
+          <img src="files/user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+        </figure>
         <h3>Пара слов о себе</h3>
         <p>Я начинающий верстальщик. Постепенно, в основном на бесплатных курсах, набираюсь опыта. В планах вырасти до полноценного фронтэнда</p>
         <h3>Чем могу быть полезен</h3>
-        <p>Знаю основы HTML и CSS. Могу верстать простейшие сайты, по примерам</p>
+        <p>Могу верстать простейшие сайты, по примерам и со словарем</p>
+        <div class="skills">
+          <h2>Мои навыки</h2>
+          <dl class="skills-list">
+            <dt class="skill-html">HTML</dt>
+              <dd class="level">
+                <div style="width: 60%;">60%</div>
+              </dd>
+            <dt class="skill-css">CSS</dt>
+              <dd class="level">
+                <div style="width: 40%;">40%</div>
+              </dd>
+          </dl>
+        </div>
       </div>
     </section>
 
@@ -33,8 +52,12 @@
       <div class="container">
         <h2 class="subheading">Мои работы</h2>
 
+        <figure class="project-image">
+          <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+        </figure>
         <h3>Сайт инструктора Кекса</h3>
         <p>Небольшой лендинг о школе для начинающих.</p>
+        <a class="button" href="source/project/index.html">Открыть страницу</a>
 
         <h3>Блог начинающего верстальщика</h3>
         <p>Статический блог про обучение HTML и CSS.</p>
@@ -43,7 +66,8 @@
 
     <footer class="page-footer">
       <div class="container">
-        Иван Радостев +79313215508
+        <a class="footer-email" href="mailto:vano9022@gmail.com">vano9022@gmail.com</a> 
+        <a class="footer-phone" href="tel:+79313215508">+79313215508</a>
       </div>
     </footer>
   </body>
