--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
         <figure class="user-image">
-          <img src="files/user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+          <img src="files/user.jpg" width="928" height="536" alt="Моя фотография">
         </figure>
         <h3>Пара слов о себе</h3>
         <p>Я начинающий верстальщик. Постепенно, в основном на бесплатных курсах, набираюсь опыта. В планах вырасти до полноценного фронтэнда</p>
@@ -37,11 +37,11 @@
           <dl class="skills-list">
             <dt class="skill-html">HTML</dt>
               <dd class="level">
-                <div style="width: 60%;">60%</div>
+                <div style="width: 35%;">35%</div>
               </dd>
             <dt class="skill-css">CSS</dt>
               <dd class="level">
-                <div style="width: 40%;">40%</div>
+                <div style="width: 30%;">30%</div>
               </dd>
           </dl>
         </div>
@@ -53,14 +53,15 @@
         <h2 class="subheading">Мои работы</h2>
 
         <figure class="project-image">
-          <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+          <img src="files/project.jpg" width="928" height="536" alt="Cайт лендинг">
         </figure>
-        <h3>Сайт инструктора Кекса</h3>
+        <h3>Сайт лендинг</h3>
         <p>Небольшой лендинг о школе для начинающих.</p>
         <a class="button" href="source/project/index.html">Открыть страницу</a>
 
         <h3>Блог начинающего верстальщика</h3>
         <p>Статический блог про обучение HTML и CSS.</p>
+        <a class="button" href="source/project2/index.html">Открыть страницу</a>
       </div>  
     </section>
 
