--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
         <h3>Сайт лендинг</h3>
         <p>Небольшой лендинг о школе для начинающих.</p>
         <a class="button" href="source/project/index.html">Открыть страницу</a>
-
+        <br>
+        <figure class="project-image">
+          <img src="files/project2.jpg" width="928" height="536" alt="Блог начинающего верстальщика">
+        </figure>        
         <h3>Блог начинающего верстальщика</h3>
         <p>Статический блог про обучение HTML и CSS.</p>
         <a class="button" href="source/project2/index.html">Открыть страницу</a>
