--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p>Статический блог про обучение HTML и CSS.</p>
         <a class="button" href="source/project2/index.html">Открыть страницу</a>
         <figure class="project-image">
-          <img src="files/project2.jpg" width="928" height="444" alt="Блог начинающего верстальщика">
+          <img src="files/project2.jpg" width="928" alt="Блог начинающего верстальщика">
         </figure>
       </div>  
     </section>
