изменение формата фото блога

--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
         <figure class="project-image">
           <img src="files/project.jpg" width="928" height="536" alt="Cайт лендинг">
         </figure>
+
         <h3>Блог начинающего верстальщика</h3>
         <p>Статический блог про обучение HTML и CSS.</p>
         <a class="button" href="source/project2/index.html">Открыть страницу</a>
         <figure class="project-image">
-          <img src="files/project2.jpg" width="928" height="536" alt="Блог начинающего верстальщика">
+          <img src="files/project2.JPG" width="928" height="536" alt="Блог начинающего верстальщика">
         </figure>
       </div>  
     </section>
