--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
               <dd class="level">
                 <div style="width: 30%;">30%</div>
               </dd>
+            <dt class="skill-js">JS</dt>
+              <dd class="level">
+                <div style="width: 10%;">10%</div>
+              </dd>              
           </dl>
         </div>
       </div>
@@ -63,7 +67,7 @@
         <p>Статический блог про обучение HTML и CSS.</p>
         <a class="button" href="source/project2/index.html">Открыть страницу</a>
         <figure class="project-image">
-          <img src="files/project2.JPG" width="928" height="536" alt="Блог начинающего верстальщика">
+          <img src="files/project2.JPG" width="928" height="436" alt="Блог начинающего верстальщика">
         </figure>
       </div>  
     </section>
@@ -74,5 +78,9 @@
         <a class="footer-phone" href="tel:+79313215508">+79313215508</a>
       </div>
     </footer>
+    <button class="up-button" type="button">
+      ↑
+    </button>
+    <script src="up-button.js"></script>
   </body>
 </html>
