доб текст о себе

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
           <img src="files/user.jpg" width="336" height="428" alt="Моя фотография">
         </figure>
         <h3>Пара слов о себе</h3>
-        <p>Я начинающий верстальщик. Постепенно, в основном на бесплатных курсах, набираюсь опыта. В планах вырасти до полноценного фронтэнда</p>
+        <p>Я начинающий верстальщик. Постепенно, в основном на бесплатных курсах, набираюсь опыта. 
+          В планах вырасти до полноценного фронтэнд-разработчика, до сеньора конечно же) 
+          Целеустремлен и постоянно работаю над собой. Мои приоритеты — опыт и знания!</p>
         <h3>Чем могу быть полезен</h3>
         <p>Могу верстать простейшие сайты, по примерам и со словарем</p>
         <div class="skills">
